fix: update flex wrap

--- a/src/helpers/flexbox.css
+++ b/src/helpers/flexbox.css
@@ -8,7 +8,7 @@
   flex-direction: column;
 }
 
-.is-flex-wrap-wrap {
+.is-flex-wrap {
   flex-wrap: wrap;
 }
 
